# muesli

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  vercel.json
.claude/: launch.json
.github/workflows/: deploy.yml
app/: audio.py  cache.py  database.py  devices.py  main.py  storage.py  summarizer.py  transcriber.py
static/: app.js  index.html  landing.html  styles.css
templates/: index.html
