[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "muesli"
version = "0.1.0"
description = "Open-source meeting notes — no bots, no cloud, fully local"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.0.0",
    "anthropic>=0.40.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
muesli = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
